# Sciebo-RDS

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  .spectral.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  transifex.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  convert-transifex-to-plugins.yml
RDS/: .gitlab-ci.yml  Makefile
RDS/circle1_adapters_and_ports/: .gitlab-ci.yml  adapter_exporter.yml  adapter_token-storage.yml
RDS/circle2_use_cases/: .gitlab-ci.yml  interface_port_file_storage.yml  interface_port_metadata.yml  port_invenio.yml  port_metadata.yml  port_owncloud.yml  use-case_token-storage.yml
RDS/layer0_ingress/web/helper/: Cargo.toml  dockerfile
RDS/layer0_ingress/web/helper/src/: lib.rs  main.rs
charts/: .gitlab-ci.yml  README.md
deploy/: Makefile  configuration-demo.yaml  configuration.yaml  configuration.yaml.example  create_certs.sh  jaeger.yaml  kustomization.yaml  kustomization.yaml.example  namespace.yaml.example  redis.yaml  secrets.yaml  values-demo.yaml  values-production.yaml  values.yaml.example
docs/: README.md  config.toml  docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebarsAbout.js
getting-started/: .gitignore  Dockerfile.rdsminikube  Makefile  README.md  create_certs.sh.example  minikube.sh  owncloudWebdav.json.example  setup-local-dev-env.md  values.enc.yaml  values.yaml  values.yaml.example  values.yaml.full  values.yaml.short
tests/: README.md
(+1602 files in other folders)
